objects/ASI_MFM_Event__c.object
<CustomObject>
    <description>ASI_MFM_Event
Promotion/marketing events for outlet</description>
    <fields>
        <fullName>ASI_CRM_Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Event_Sub_Brand_Copy__c</fullName>
        <label>Event Sub Brand</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Event_Sub_Channel_Copy__c</fullName>
        <label>Event Sub-Channel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TP_City__c</fullName>
        <formula>ASI_CRM_CN_TP_Customer__r.ASI_CRM_CN_CCity__r.Name</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TP_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Covered Stores</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TP_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TP_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Covered Outlet</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TP_Region__c</fullName>
        <formula>ASI_CRM_CN_TP_Customer__r.ASI_CRM_CN_Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EventCode__c</fullName>
        <displayFormat>{YY}{00000}</displayFormat>
        <label>Event Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalDescription__c</fullName>
        <label>Local Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Agency_Team__c</fullName>
        <label>Agency Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_After_End_Date_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After End Date Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Before_10_Day_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before 10 Day Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Channel_Strategy_Code__c</fullName>
        <label>Channel Strategy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Channel_Strategy__c</fullName>
        <label>Channel Strategy</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Chinese_Name__c</fullName>
        <label>Event Name (Chi)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Completed_Outlet_Ratio__c</fullName>
        <formula>if(ASI_MFM_CN_Outlet_Count__c = 0,1,ASI_MFM_CN_Completed_Outlet__c /  ASI_MFM_CN_Outlet_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Outlet Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Completed_Outlet__c</fullName>
        <label>Completed Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Event_Chinese_Description__c</fullName>
        <label>Event Chinese Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_KPI__c</fullName>
        <label>KPI</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Outlet_Count__c</fullName>
        <label>Outlet Count</label>
        <summaryForeignKey>ASI_MFM_Event_Outlet__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Team__c</fullName>
        <label>CN Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTMK</fullName>
                </value>
                <value>
                    <fullName>RTM (C)</fullName>
                </value>
                <value>
                    <fullName>RTM (E)</fullName>
                </value>
                <value>
                    <fullName>RTM (S)</fullName>
                </value>
                <value>
                    <fullName>RTM (N)</fullName>
                </value>
                <value>
                    <fullName>BMK</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Total_Budget__c</fullName>
        <label>Total Budget</label>
        <summarizedField>ASI_MFM_Event_PP__c.ASI_MFM_Amount_Allocated_to_Plan__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Event_PP__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Channel_Strategy_1__c</fullName>
        <label>Channel Strategy 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continue Premiumization</fullName>
                </value>
                <value>
                    <fullName>Deep penetration of Martell in South region</fullName>
                </value>
                <value>
                    <fullName>Enhance penetration of premium Whisky in T2/3 cities</fullName>
                </value>
                <value>
                    <fullName>Single malt seeding in selected cities</fullName>
                </value>
                <value>
                    <fullName>Secure Scotch leadership in MOT-ON</fullName>
                </value>
                <value>
                    <fullName>Brand image show case</fullName>
                </value>
                <value>
                    <fullName>CRM optimization and acceleration</fullName>
                </value>
                <value>
                    <fullName>Tier 3/4  city expansion</fullName>
                </value>
                <value>
                    <fullName>IS meal occasion trial in selected cities outside GD/FJ</fullName>
                </value>
                <value>
                    <fullName>Enhance penetration of wines in P1/P2 cities</fullName>
                </value>
                <value>
                    <fullName>Beer conversion in beer outlets &amp; New drinker recruitment</fullName>
                </value>
                <value>
                    <fullName>Female consumer recruitment</fullName>
                </value>
                <value>
                    <fullName>Home consumption &amp; BYO development</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Channel_Strategy_2__c</fullName>
        <label>Channel Strategy 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continue Premiumization</fullName>
                </value>
                <value>
                    <fullName>Deep penetration of Martell in South region</fullName>
                </value>
                <value>
                    <fullName>Enhance penetration of premium Whisky in T2/3 cities</fullName>
                </value>
                <value>
                    <fullName>Single malt seeding in selected cities</fullName>
                </value>
                <value>
                    <fullName>Secure Scotch leadership in MOT-ON</fullName>
                </value>
                <value>
                    <fullName>Brand image show case</fullName>
                </value>
                <value>
                    <fullName>CRM optimization and acceleration</fullName>
                </value>
                <value>
                    <fullName>Tier 3/4  city expansion</fullName>
                </value>
                <value>
                    <fullName>IS meal occasion trial in selected cities outside GD/FJ</fullName>
                </value>
                <value>
                    <fullName>Enhance penetration of wines in P1/P2 cities</fullName>
                </value>
                <value>
                    <fullName>Beer conversion in beer outlets &amp; New drinker recruitment</fullName>
                </value>
                <value>
                    <fullName>Female consumer recruitment</fullName>
                </value>
                <value>
                    <fullName>Home consumption &amp; BYO development</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Detail_Coverage__c</fullName>
        <label>Detail Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_End_Date_Rollup__c</fullName>
        <description>End date depends on maximum of end date in event outlet</description>
        <label>End Date</label>
        <summarizedField>ASI_MFM_Event_Outlet__c.ASI_MFM_End_Date__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Event_Outlet__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_Outlet_Count__c</fullName>
        <description>System field</description>
        <label>Event Outlet Count</label>
        <summaryForeignKey>ASI_MFM_Event_Outlet__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_Outlet_Msg_Long__c</fullName>
        <label>Event Outlet Msg Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_Outlet_Msg__c</fullName>
        <label>Event Outlet Msg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_Type__c</fullName>
        <label>Key Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image/Brand Driven Event</fullName>
                </value>
                <value>
                    <fullName>Thematic Promotion</fullName>
                </value>
                <value>
                    <fullName>Vol. Promotion</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Consumer Trail</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Trade Fair</fullName>
                </value>
                <value>
                    <fullName>Commando</fullName>
                </value>
                <value>
                    <fullName>Image Event</fullName>
                </value>
                <value>
                    <fullName>Luxe Event</fullName>
                </value>
                <value>
                    <fullName>NPL Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_KPI_Setting_1__c</fullName>
        <label>KPI Setting 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KPI_Setting_2__c</fullName>
        <label>KPI Setting 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KPI_Setting_3__c</fullName>
        <label>KPI Setting 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Key_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Brand</label>
        <referenceTo>ASI_CRM_CN_Brand_Group__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Key_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Key_Event_Type_Budget_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Key Event Type Budget Share(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Mechanics__c</fullName>
        <label>Mechanics</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ON_OFF__c</fullName>
        <label>On/Off</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Objective__c</fullName>
        <label>Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Proposed_Outet_Coverage_Total__c</fullName>
        <label>Proposed Outet Coverage(Total)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Start_Date_Rollup__c</fullName>
        <description>Start date by earliest start date in event outlet</description>
        <label>Start Date</label>
        <summarizedField>ASI_MFM_Event_Outlet__c.ASI_MFM_Beginning_Date__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Event_Outlet__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                    <default>true</default>
                    <label>Proposal</label>
                </value>
                <value>
                    <fullName>On Going</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Event_Type_Budget_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sub Event Type Budget Share(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Event_Type__c</fullName>
        <label>Sub Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image/Brand Driven Event</fullName>
                </value>
                <value>
                    <fullName>Thematic Promotion</fullName>
                </value>
                <value>
                    <fullName>Vol. Promotion</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Consumer Trail</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Trade Fair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Team__c</fullName>
        <formula>Text(Owner:User.ASI_MFM_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Budget__c</fullName>
        <label>Total Budget</label>
        <summarizedField>ASI_MFM_Event_PP__c.ASI_MFM_Amount_Allocated_to_Plan__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Event_PP__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_PO_Amt__c</fullName>
        <label>Total PO Amt</label>
        <summarizedField>ASI_MFM_Event_PP__c.ASI_MFM_Amount_Allocated_to_Plan__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Event_PP__c.ASI_MFM_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Event_Type__c</fullName>
        <label>Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commando</fullName>
                </value>
                <value>
                    <fullName>Image Event</fullName>
                </value>
                <value>
                    <fullName>Luxe Event</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>NPL Event</fullName>
                </value>
                <value>
                    <fullName>Thematic Promotion</fullName>
                </value>
                <value>
                    <fullName>Trade Fair</fullName>
                </value>
                <value>
                    <fullName>Vol. Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Mechanics__c</columns>
        <columns>ASI_MFM_Objective__c</columns>
        <columns>ASI_MFM_Budget_Owner__c</columns>
        <columns>ASI_MFM_Start_Date_Rollup__c</columns>
        <columns>ASI_MFM_End_Date_Rollup__c</columns>
        <columns>ASI_CRM_LocalDescription__c</columns>
        <columns>ASI_CRM_CN_Event_Sub_Brand_Copy__c</columns>
        <columns>ASI_CRM_CN_Event_Sub_Channel_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Event__c.ASI_MFM_CN_Event</value>
        </filters>
        <label>CN Events</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_VN_Events</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_EventCode__c</columns>
        <columns>ASI_CRM_Activate__c</columns>
        <columns>ASI_MFM_Start_Date__c</columns>
        <columns>ASI_MFM_End_Date__c</columns>
        <columns>ASI_CRM_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Event__c.ASI_CRM_VN_Event</value>
        </filters>
        <label>All VN Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyEvent</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Start_Date_Rollup__c</columns>
        <columns>ASI_MFM_End_Date_Rollup__c</columns>
        <columns>ASI_MFM_Mechanics__c</columns>
        <columns>ASI_MFM_Objective__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Budget_Owner__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Event</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_TP_Outlet</fullName>
        <active>true</active>
        <description>for cn trade plan outlets</description>
        <label>CN TP Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Event</fullName>
        <active>true</active>
        <label>VN Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Event</fullName>
        <active>true</active>
        <label>CN Event</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_Budget_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CN&apos;), (ASI_MFM_Key_Event_Type_Budget_Share__c + ASI_MFM_Sub_Event_Type_Budget_Share__c) != 100)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Key_Event_Type_Budget_Share__c</errorDisplayField>
        <errorMessage>Total budget share for Key and Sub Event Type must be equal to 100 %</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CN_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_MFM_End_Date__c &lt;  ASI_MFM_Start_Date__c</errorConditionFormula>
        <errorMessage>“End Date” should not smaller than “Start Date”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Event_Type_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CN&apos;),TEXT(ASI_MFM_Event_Type__c) =  Text(ASI_MFM_Sub_Event_Type__c))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Sub_Event_Type__c</errorDisplayField>
        <errorMessage>Sub Event Type cannot be same as Key Event Type</errorMessage>
    </validationRules>
</CustomObject>